force-app/main/default/objects/Sales_Target__c/fields/Amount_Actual__c.field-meta.xml
<CustomField>
    <fullName>Amount_Actual__c</fullName>
    <label>Amount Actual</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Amount Actual</description>
</CustomField>