force-app/main/default/objects/Sales_Target__c/fields/Amount_Target__c.field-meta.xml
<CustomField>
    <fullName>Amount_Target__c</fullName>
    <label>Amount Target</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Amount Target</description>
</CustomField>