force-app/main/default/objects/Sales_Target__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>Text</type>
    <length>20</length>
    <description>Period</description>
</CustomField>