force-app/main/default/objects/Sales_Target__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User</description>
</CustomField>